force-app/main/default/objects/Borrow_Log__c/Borrow_Log__c.object-meta.xml
<CustomObject>
    <description>A record of book copies lent to contacts, and their due date</description>
    <label>Borrow Log</label>
    <nameField>
        <displayFormat>B{0000}</displayFormat>
        <label>Borrow ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Borrow Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>