force-app/main/default/objects/Borrow_Log__c/fields/Book_Copy__c.field-meta.xml
<CustomField>
    <fullName>Book_Copy__c</fullName>
    <description>The Book Copy that is being borrowed</description>
    <label>Book Copy</label>
    <referenceTo>Book_Copy__c</referenceTo>
    <relationshipLabel>Borrow Log</relationshipLabel>
    <relationshipName>Borrow_Log</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>