force-app/main/default/objects/Borrow_Log__c/fields/Book_Title__c.field-meta.xml
<CustomField>
    <fullName>Book_Title__c</fullName>
    <description>Title of the book borrowed by the contact</description>
    <formula>Book_Copy__r.Book__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book Title</label>
    <type>Text</type>
</CustomField>