force-app/main/default/objects/Borrow_Log__c/fields/Returned__c.field-meta.xml
<CustomField>
    <fullName>Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked indicates that the book copy has been returned by the contact.</description>
    <label>Returned</label>
    <type>Checkbox</type>
</CustomField>