force-app/main/default/objects/Borrow_Log__c/validationRules/newRecordReturnedFieldFalse.validationRule-meta.xml
<ValidationRule>
    <fullName>newRecordReturnedFieldFalse</fullName>
    <active>true</active>
    <description>The Returned field must be false when creating a new Borrow Log record.</description>
    <errorConditionFormula>ISNEW() &amp;&amp;  Returned__c</errorConditionFormula>
    <errorMessage>The Returned field should not be selected when borrowing a book.</errorMessage>
</ValidationRule>