force-app/main/default/objects/Borrow_Log__c/validationRules/validateBookCopyAvailability.validationRule-meta.xml
<ValidationRule>
    <fullName>validateBookCopyAvailability</fullName>
    <active>true</active>
    <description>Before permitting a borrow, validate that the book copy status is available.</description>
    <errorConditionFormula>NOT( ISPICKVAL(Book_Copy__r.Status__c, &#39;Available&#39;) )</errorConditionFormula>
    <errorMessage>This book is unavailable for borrow.</errorMessage>
</ValidationRule>